Separate GameServer responsibilities further and couple to game instance using event